# Reef

./: .gitignore  NewLang.sln  NewLang.sln.DotSettings  Reef.sln  Reef.sln.DotSettings  readme.md
NewLang.Console/: NewLang.Console.csproj  Program.cs
NewLang.Core/: Expression.cs  ExpressionTreeBuilder.cs  IPattern.cs  LangProgram.cs  NewLang.Core.csproj  Parser.cs  ParserError.cs  PeakableEnumerator.cs  PeekableEnumerator.cs  ProgramClass.cs  ProgramScope.cs  ProgramUnion.cs  ResolvedTypeChecker.cs  SourceSpan.cs  Token.cs  TokenType.cs  Tokenizer.cs  TypeChecker.cs  TypeCheckerError.cs  TypeTwoTypeChecker.cs  mvp.test
NewLang.Core.Benchmarks/: ExpressionTreeBuilderBenchmarks.cs  NewLang.Core.Benchmarks.csproj  ParserBenchmarks.cs  Program.cs  TokenizerBenchmarks.cs
NewLang.Core.Tests/: ExpressionHelpers.cs  ExpressionMetaTests.cs  ExpressionTests.cs  NewLang.Core.Tests.csproj  ParserMetaTests.cs  ParserTests.cs  PeakableEnumeratorTests.cs  PeekableEnumeratorTests.cs  TokenizerMetaTests.cs  TokenizerTests.cs  TypeCheckerTests.cs
Reef.Console/: Compiler.cs  Program.cs  Reef.Console.csproj  Test.rf
Reef.Core/: Absail.cs  AssemblyLine.cs  AssemblyLine2.cs  (+23 more)
Reef.Core.Benchmarks/: ParserBenchmarks.cs  Program.cs  Reef.Core.Benchmarks.csproj  TokenizerBenchmarks.cs
Reef.Core.Tests/: ExpressionHelpers.cs  FluentAssertionsGlobalConfig.cs  LoweredProgramHelpers.cs  NewLoweredProgramHelpers.cs  Reef.Core.Tests.csproj  TestMeAttribute.cs  TokenizerMetaTests.cs  TokenizerTests.cs  TypeCheckerTests.cs
reef-runtime/: CMakeLists.txt  build.ps1  reef-runtime.c  runtime.c
(+143 files in other folders)
